template: update font awesome to v5

--- a/templates/g5_helium/custom/scss/_mainnav.scss
+++ b/templates/g5_helium/custom/scss/_mainnav.scss
@@ -5,6 +5,14 @@
 			> .g-menu-item-container {
 				white-space: nowrap;
 			}
+			&.g-parent {
+				.g-menu-parent-indicator {
+					&:after {
+						font-family: 'Font Awesome 5 Free';
+						font-weight: 900 !important;
+					}
+				}
+			}
 		}
 	}
 }
