--- a/templates/g5_helium/custom/scss/_typography.scss
+++ b/templates/g5_helium/custom/scss/_typography.scss
@@ -36,7 +36,8 @@ ul.list-icon {
 			display: inline-block;
 			margin-right: 1rem;
 			vertical-align: middle;
-			font-family: FontAwesome;
+			font-family: 'Font Awesome 5 Free';
+			font-weight: 900;
 		}
 	}
 	&.discount li::before {
