--- a/templates/g5_helium/custom/scss/_virtuemart.scss
+++ b/templates/g5_helium/custom/scss/_virtuemart.scss
@@ -64,7 +64,7 @@
 		@include breakpoint(no-mobile) {
 			margin-bottom: 0;
 		}
-		&.size-25 {
+		&.size-is {
 			@include justify-content(space-between);
 			@include breakpoint(large-mobile-range) {
 				@include flex-basis(50%);
@@ -96,6 +96,10 @@
 			box-sizing: border-box;
 			margin-bottom: 0.5rem;
 			border: solid 1px lighten($accent-color-1, 25%);
+			img {
+				width: 100%;
+				height: auto;
+			}
 		}
 	}
 	.is-product {
@@ -599,7 +603,8 @@
 				padding: 0.35rem 1rem;
 				margin: 0 0.5rem;
 				font-size: 1.5rem;
-				font-weight: $font-weight-regular;
+				font-family: 'Font Awesome 5 Free';
+				font-weight: 900;
 			}
 		}
 
