style: fix moble menu sublevel icons

--- a/templates/g5_helium/custom/scss/_mainnav.scss
+++ b/templates/g5_helium/custom/scss/_mainnav.scss
@@ -16,6 +16,16 @@
 			}
 		}
 	}
+	.g-sublevel {
+		.g-go-back {
+			.g-menu-item-container {
+				&:before {
+					font-family: 'Font Awesome 5 Free';
+					font-weight: 900 !important;
+				}
+			}
+		}
+	}
 }
 
 // VMmenu
