--- a/templates/g5_helium/custom/scss/_utilities.scss
+++ b/templates/g5_helium/custom/scss/_utilities.scss
@@ -67,3 +67,14 @@
 .alert-inline {
 	padding: 0.1rem 0.5rem !important;
 }
+
+.visuallyhidden {
+	position: absolute;
+	overflow: hidden;
+	clip: rect(0 0 0 0);
+	height: 1px;
+	width: 1px;
+	margin: -1px;
+	padding: 0;
+	border: 0;
+}
